force-app/main/default/objects/Request__c/fields/A_Signed_NDA__c.field-meta.xml
<CustomField>
    <fullName>A_Signed_NDA__c</fullName>
    <label>Do We Have A Signed NDA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>No, but there is a customer contract in place with a confidentiality provision</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
                <label>Yes, and it was uploaded to the notes and attachments of this request</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>