force-app/main/default/objects/Request__c/fields/Account_address_formula__c.field-meta.xml
<CustomField>
    <fullName>Account_address_formula__c</fullName>
    <formula>Account__r.BillingStreet + &quot; &quot; +  Account__r.BillingCity +&quot;, &quot; +  Account__r.BillingPostalCode +  Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account address formula</label>
    <type>Text</type>
</CustomField>