force-app/main/default/objects/Request__c/fields/Account_ARR__c.field-meta.xml
<CustomField>
    <fullName>Account_ARR__c</fullName>
    <description>MIS-1173</description>
    <formula>Account__r.fr_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>