force-app/main/default/objects/Request__c/fields/Account_Base_Product__c.field-meta.xml
<CustomField>
    <fullName>Account_Base_Product__c</fullName>
    <description>MIS-7521</description>
    <formula>Account__r.Base_Product__c</formula>
    <label>Account Base Product</label>
    <type>Text</type>
</CustomField>