force-app/main/default/objects/Request__c/fields/Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address__c</fullName>
    <label>Account Billing Address</label>
    <type>TextArea</type>
</CustomField>