force-app/main/default/objects/Request__c/fields/Account_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Unit__c</fullName>
    <formula>TEXT(Account__r.Business_Unit__c )</formula>
    <label>Account Business Unit</label>
    <type>Text</type>
</CustomField>