force-app/main/default/objects/Request__c/fields/Account_Code_Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>Account_Code_Red_Flag__c</fullName>
    <formula>Account__r.Code_Red_Flag__c</formula>
    <label>Account Code Red Flag</label>
    <type>Text</type>
</CustomField>