force-app/main/default/objects/Request__c/fields/Account_CSM__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM__c</fullName>
    <formula>Account__r.Assigned_CSA_Name__r.FirstName  &amp; &apos; &apos; &amp; Account__r.Assigned_CSA_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account CSM</label>
    <type>Text</type>
</CustomField>