force-app/main/default/objects/Request__c/fields/Account_Division__c.field-meta.xml
<CustomField>
    <fullName>Account_Division__c</fullName>
    <description>MIS-775</description>
    <formula>Account__r.Owner_Division__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Division</label>
    <type>Text</type>
</CustomField>