force-app/main/default/objects/Request__c/fields/Account_HealthScore__c.field-meta.xml
<CustomField>
    <fullName>Account_HealthScore__c</fullName>
    <formula>Account__r.Health_Score__c</formula>
    <label>Account HealthScore</label>
    <type>Text</type>
</CustomField>