force-app/main/default/objects/Request__c/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <description>MIS-7521</description>
    <formula>TEXT(Account__r.Stage__c)</formula>
    <label>Account Stage</label>
    <type>Text</type>
</CustomField>