force-app/main/default/objects/Request__c/fields/Account_TCV__c.field-meta.xml
<CustomField>
    <fullName>Account_TCV__c</fullName>
    <formula>Account__r.TCV__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>