force-app/main/default/objects/Request__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Code Red</fullName>
            </value>
            <value>
                <fullName>VIP Club (+$60K ARR)</fullName>
            </value>
            <value>
                <fullName>Accounts &gt;$25K ARR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>