force-app/main/default/objects/Request__c/fields/Add_App_ID__c.field-meta.xml
<CustomField>
    <fullName>Add_App_ID__c</fullName>
    <description>MIS-7521</description>
    <label>Add App ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>