force-app/main/default/objects/Request__c/fields/Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Add_Ons__c</fullName>
    <label>Add-Ons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>