force-app/main/default/objects/Request__c/fields/Additional_Accounts_Involved__c.field-meta.xml
<CustomField>
    <fullName>Additional_Accounts_Involved__c</fullName>
    <label>Additional Accounts Involved</label>
    <length>255</length>
    <type>Text</type>
</CustomField>