force-app/main/default/objects/Request__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <label>Notes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>