force-app/main/default/objects/Request__c/fields/Additional_Feedback_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback_Notes__c</fullName>
    <label>Additional Feedback Notes</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>