force-app/main/default/objects/Request__c/fields/Additional_License_Fee__c.field-meta.xml
<CustomField>
    <fullName>Additional_License_Fee__c</fullName>
    <inlineHelpText>Additional license fee for additional features</inlineHelpText>
    <label>Additional License Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>