force-app/main/default/objects/Request__c/fields/Additional_Tax_documents_required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Tax_documents_required__c</fullName>
    <description>#1113520</description>
    <label>Additional Tax documents required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>