force-app/main/default/objects/Request__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>Please detail full address: Street, City, State, Zip code, Country (And clarify if the change is done to the Admin/ Bill to contact/ both)</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>