force-app/main/default/objects/Request__c/fields/Admin_User__c.field-meta.xml
<CustomField>
    <fullName>Admin_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admin User</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Requests (Admin User)</relationshipLabel>
    <relationshipName>Requests_Admin_User</relationshipName>
    <type>Lookup</type>
</CustomField>