force-app/main/default/objects/Request__c/fields/Advisory_Services_Consultants__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Services_Consultants__c</fullName>
    <label>Primary ASC</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Becca Edelman</fullName>
            </value>
            <value>
                <fullName>Ben Fernando</fullName>
            </value>
            <value>
                <fullName>Heidi Frank</fullName>
            </value>
            <value>
                <fullName>Lindsey Anderson</fullName>
            </value>
            <value>
                <fullName>Linh Tran Huy</fullName>
            </value>
            <value>
                <fullName>Lisa Grunwald</fullName>
            </value>
            <value>
                <fullName>Tom Verderber</fullName>
            </value>
            <value>
                <fullName>Varvara Blazhko</fullName>
            </value>
            <value>
                <fullName>Victoria Mauriello</fullName>
            </value>
            <value>
                <fullName>Mackenzie Cahill</fullName>
            </value>
            <value>
                <fullName>Tianming Jiang</fullName>
                <label>Tina Jiang</label>
            </value>
            <value>
                <fullName>Adam Wertheim</fullName>
            </value>
            <value>
                <fullName>Biqing Kuang</fullName>
            </value>
            <value>
                <fullName>Celal Alici</fullName>
            </value>
            <value>
                <fullName>Ivana Nikolic</fullName>
            </value>
            <value>
                <fullName>Andrew Liu</fullName>
            </value>
            <value>
                <fullName>Gavin Davidson</fullName>
            </value>
            <value>
                <fullName>James Alici</fullName>
            </value>
            <value>
                <fullName>Michael Monroe</fullName>
            </value>
            <value>
                <fullName>Jack Sherman</fullName>
            </value>
            <value>
                <fullName>Joshua Shyu</fullName>
            </value>
            <value>
                <fullName>Domenico Mansi</fullName>
            </value>
            <value>
                <fullName>Francesca Everson</fullName>
            </value>
            <value>
                <fullName>Natasha Chatterjee</fullName>
            </value>
            <value>
                <fullName>Nicolas Bureau</fullName>
            </value>
            <value>
                <fullName>Priyesh Patel</fullName>
            </value>
            <value>
                <fullName>Kelvin Seah</fullName>
            </value>
            <value>
                <fullName>Aaron Wong</fullName>
            </value>
            <value>
                <fullName>Christian Kearns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>