force-app/main/default/objects/Request__c/fields/Advisory_Services_Data_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Services_Data_Engineer__c</fullName>
    <label>Primary ASDE</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dana Mishor</fullName>
            </value>
            <value>
                <fullName>Ido Amit</fullName>
            </value>
            <value>
                <fullName>Keren Hondiashvili</fullName>
            </value>
            <value>
                <fullName>Maya Rosenthal</fullName>
            </value>
            <value>
                <fullName>Nimrod Fischer</fullName>
            </value>
            <value>
                <fullName>Omri Tal</fullName>
            </value>
            <value>
                <fullName>Shahar Barak</fullName>
            </value>
            <value>
                <fullName>Tal Yahini</fullName>
            </value>
            <value>
                <fullName>Tanya Patroul</fullName>
            </value>
            <value>
                <fullName>Tomer Avizur Gilad</fullName>
            </value>
            <value>
                <fullName>Itay Ridel</fullName>
            </value>
            <value>
                <fullName>Linoy Mirel</fullName>
            </value>
            <value>
                <fullName>Roy Benisty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>