force-app/main/default/objects/Request__c/fields/Advisory_Services_Scoping__c.field-meta.xml
<CustomField>
    <fullName>Advisory_Services_Scoping__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Advisory Services Scoping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>