force-app/main/default/objects/Request__c/fields/Aligned_Room_Custom__c.field-meta.xml
<CustomField>
    <fullName>Aligned_Room_Custom__c</fullName>
    <defaultValue>0</defaultValue>
    <description>MIS-7706</description>
    <label>Aligned Room Custom</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>