force-app/main/default/objects/Request__c/fields/All_License_Features__c.field-meta.xml
<CustomField>
    <fullName>All_License_Features__c</fullName>
    <inlineHelpText>Using standard, approved feature descriptions taken from the Contract Cover Page</inlineHelpText>
    <label>All License Features</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>