force-app/main/default/objects/Request__c/fields/AM_Proposal_Attempt_to_Prevent_Churn__c.field-meta.xml
<CustomField>
    <fullName>AM_Proposal_Attempt_to_Prevent_Churn__c</fullName>
    <description>MIS-775</description>
    <label>AM Proposal / Attempt to Prevent Churn</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>