force-app/main/default/objects/Request__c/fields/API_Google_Sheets_Training__c.field-meta.xml
<CustomField>
    <fullName>API_Google_Sheets_Training__c</fullName>
    <defaultValue>0</defaultValue>
    <label>API Google Sheets Training</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>