force-app/main/default/objects/Request__c/fields/Approved_as_an_Exception__c.field-meta.xml
<CustomField>
    <fullName>Approved_as_an_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-4963</description>
    <label>Approved as an Exception</label>
    <type>Checkbox</type>
</CustomField>