force-app/main/default/objects/Request__c/fields/Approved_by_Finance__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Finance__c</fullName>
    <description>#1104786 ASR Request adjustments</description>
    <label>Approved by Finance</label>
    <type>Date</type>
</CustomField>