force-app/main/default/objects/Request__c/fields/Approved_By_Finance_Text__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Finance_Text__c</fullName>
    <formula>Case (month( Approved_by_Finance__c ),
1,&apos;January&apos;,
2,&apos;February&apos;,
3,&apos;March&apos;,
4,&apos;April&apos;,
5,&apos;May&apos;,
6,&apos;June&apos;,
7,&apos;July&apos;,
8,&apos;August&apos;,
9,&apos;September&apos;,
10,&apos;October&apos;,
11,&apos;November&apos;,
12,&apos;December&apos;,&apos;&apos;) &amp; &apos; &apos; &amp;
text(day(Approved_by_Finance__c )) &amp; &apos;, &apos; &amp; text(year(Approved_by_Finance__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved By Finance (Text)</label>
    <type>Text</type>
</CustomField>