force-app/main/default/objects/Request__c/fields/Apps_That_Use_This_SDK__c.field-meta.xml
<CustomField>
    <fullName>Apps_That_Use_This_SDK__c</fullName>
    <description>MIS-7521</description>
    <label>Apps That Use This SDK</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>