force-app/main/default/objects/Request__c/fields/Are_we_a_New_Vendor_Existing_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Are_we_a_New_Vendor_Existing_Vendor__c</fullName>
    <description>#1113520</description>
    <label>Are we a New Vendor/ Existing Vendor?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Vendor</fullName>
            </value>
            <value>
                <fullName>Existing Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>