force-app/main/default/objects/Request__c/fields/AS_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>AS_Closed_Lost_Reason__c</fullName>
    <description>#1104786 AS Requests adjustments</description>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Candidate for custom cuts (Datasets only)</fullName>
            </value>
            <value>
                <fullName>Client need changed</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Data quality</fullName>
            </value>
            <value>
                <fullName>Fund lacks data feed ingestion capabilities (Datasets only)</fullName>
            </value>
            <value>
                <fullName>Mobile web</fullName>
            </value>
            <value>
                <fullName>Not enough signal</fullName>
            </value>
            <value>
                <fullName>Not Feasible</fullName>
            </value>
            <value>
                <fullName>Not relevant stock</fullName>
            </value>
            <value>
                <fullName>Not relevant to investment strategy (Datasets only)</fullName>
            </value>
            <value>
                <fullName>Not right time</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Too expensive</fullName>
            </value>
            <value>
                <fullName>Weak Signal</fullName>
            </value>
            <value>
                <fullName>We sold another SMWB solution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>