force-app/main/default/objects/Request__c/fields/AS_Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>AS_Deal_Type__c</fullName>
    <label>AS / DAAS Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Sale</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Feature Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>