force-app/main/default/objects/Request__c/fields/ASC_AS_Consultant_effort__c.field-meta.xml
<CustomField>
    <fullName>ASC_AS_Consultant_effort__c</fullName>
    <label>ASC Estimated Effort (days)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>