force-app/main/default/objects/Request__c/fields/ASC_effort_actual_days__c.field-meta.xml
<CustomField>
    <fullName>ASC_effort_actual_days__c</fullName>
    <label>ASC Effort - Actual Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>