force-app/main/default/objects/Request__c/fields/ASDE_effort__c.field-meta.xml
<CustomField>
    <fullName>ASDE_effort__c</fullName>
    <label>ASDE Estimated Effort (days)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>