force-app/main/default/objects/Request__c/fields/ASDE_effort_actual_days__c.field-meta.xml
<CustomField>
    <fullName>ASDE_effort_actual_days__c</fullName>
    <label>ASDE Effort - Actual Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>