force-app/main/default/objects/Request__c/fields/ASDE_effort_first_90_days__c.field-meta.xml
<CustomField>
    <fullName>ASDE_effort_first_90_days__c</fullName>
    <description>#1094180</description>
    <label>ASDE Effort - first 90 days</label>
    <type>TextArea</type>
</CustomField>