force-app/main/default/objects/Request__c/fields/Assigned_CSM__c.field-meta.xml
<CustomField>
    <fullName>Assigned_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-5318</description>
    <label>Assigned CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Requests_for_CSM</relationshipName>
    <type>Lookup</type>
</CustomField>