force-app/main/default/objects/Request__c/fields/Assignment_Name_Change__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Name_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-3836</description>
    <label>Assignment/Name Change</label>
    <type>Checkbox</type>
</CustomField>