force-app/main/default/objects/Request__c/fields/Attach_Vendor_Supplier_form__c.field-meta.xml
<CustomField>
    <fullName>Attach_Vendor_Supplier_form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#1113520</description>
    <inlineHelpText>Vendor/ Supplier form is attached to the Opportunity/ Account</inlineHelpText>
    <label>Vendor/ Supplier form attached</label>
    <type>Checkbox</type>
</CustomField>