force-app/main/default/objects/Request__c/fields/Attach_Withholding_certificate__c.field-meta.xml
<CustomField>
    <fullName>Attach_Withholding_certificate__c</fullName>
    <label>Attach Withholding certificate</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>