force-app/main/default/objects/Request__c/fields/Audit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Audit_Notes__c</fullName>
    <label>Audit Notes</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>