force-app/main/default/objects/Request__c/fields/Average_Visits_On_Desktop_100K__c.field-meta.xml
<CustomField>
    <fullName>Average_Visits_On_Desktop_100K__c</fullName>
    <description>MIS-7797</description>
    <inlineHelpText>For the examined domains in the required country, do they have more than 100k average monthly visits on desktop?</inlineHelpText>
    <label>Average Visits On Desktop &gt; 100K</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>