force-app/main/default/objects/Request__c/fields/Batch_API_Training__c.field-meta.xml
<CustomField>
    <fullName>Batch_API_Training__c</fullName>
    <label>Batch API Training</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>