force-app/main/default/objects/Request__c/fields/Best_Practice_Webinar__c.field-meta.xml
<CustomField>
    <fullName>Best_Practice_Webinar__c</fullName>
    <description>MIS-729 Client Success Analyst Request Amendments</description>
    <label>Best Practice Webinar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>