force-app/main/default/objects/Request__c/fields/Billing_Accounts_Report_Link__c.field-meta.xml
<CustomField>
    <fullName>Billing_Accounts_Report_Link__c</fullName>
    <description>MIS-5869</description>
    <formula>BR()+HYPERLINK(LEFT($Api.Partner_Server_URL_610, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_610))&amp;&apos;lightning/r/Report/00OQB000002C9j72AC/view&apos;,
										IMAGE(&quot;https://similarweb--c.vf.force.com/resource/1726747817000/Banner_Request_Billing_Accounts_Report?&quot;, &quot;Alt_Text&quot;), &quot;Hyperlink Tooltip&quot;)</formula>
    <label>Billing Accounts Report Link</label>
    <type>Text</type>
</CustomField>