force-app/main/default/objects/Request__c/fields/Billing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Billing_Comments__c</fullName>
    <label>Billing Comments</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>