force-app/main/default/objects/Request__c/fields/Brands_Competitors_To_Include__c.field-meta.xml
<CustomField>
    <fullName>Brands_Competitors_To_Include__c</fullName>
    <description>MIS-7726</description>
    <label>Brands / Competitors To Include</label>
    <type>TextArea</type>
</CustomField>