force-app/main/default/objects/Request__c/fields/Business_Objective__c.field-meta.xml
<CustomField>
    <fullName>Business_Objective__c</fullName>
    <description>MIS-3771</description>
    <inlineHelpText>Insert details of what the client wishes to achieve</inlineHelpText>
    <label>Business Objective</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>