force-app/main/default/objects/Request__c/fields/Business_Question_Led_Training__c.field-meta.xml
<CustomField>
    <fullName>Business_Question_Led_Training__c</fullName>
    <label>Business Question Led Training</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>