force-app/main/default/objects/Request__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>MIS-760</description>
    <label>Disapproval Reason</label>
    <type>TextArea</type>
</CustomField>