force-app/main/default/objects/Request__c/fields/Cancellation_Reason_PickList__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_PickList__c</fullName>
    <description>MIS-760</description>
    <label>Disapproval Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate Request</fullName>
            </value>
            <value>
                <fullName>Client Need Expired</fullName>
            </value>
            <value>
                <fullName>Resource Issue</fullName>
            </value>
            <value>
                <fullName>Invalid Request</fullName>
            </value>
            <value>
                <fullName>SM Declined (Must give reason below)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Closed Lost Opportunity</fullName>
            </value>
            <value>
                <fullName>90 Day Expiration</fullName>
            </value>
            <value>
                <fullName>Client Denied Onboarding</fullName>
            </value>
            <value>
                <fullName>Onboarding done by AM/CSM</fullName>
            </value>
            <value>
                <fullName>Onboarding not needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>