force-app/main/default/objects/Request__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Site Conversion</fullName>
            </value>
            <value>
                <fullName>Brand/Category Conversion</fullName>
            </value>
            <value>
                <fullName>Market Landscape</fullName>
            </value>
            <value>
                <fullName>Folder Analysis</fullName>
            </value>
            <value>
                <fullName>Raw Data</fullName>
            </value>
            <value>
                <fullName>Top_Keywords_Conversion</fullName>
                <label>Top Keywords Conversion</label>
            </value>
            <value>
                <fullName>Data Enrichment</fullName>
            </value>
            <value>
                <fullName>Top_Products</fullName>
                <label>Top Products</label>
            </value>
            <value>
                <fullName>Audience Behavior</fullName>
            </value>
            <value>
                <fullName>Onsite Search</fullName>
            </value>
            <value>
                <fullName>Traffic Pulse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>