force-app/main/default/objects/Request__c/fields/Change_of_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Change_of_Payment_Terms__c</fullName>
    <inlineHelpText>Will the Payment Terms change in the current agreement?</inlineHelpText>
    <label>Change of Payment Terms?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>