force-app/main/default/objects/Request__c/fields/Charge_Customer_For_Extension__c.field-meta.xml
<CustomField>
    <fullName>Charge_Customer_For_Extension__c</fullName>
    <label>Charge Customer For Extension</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Extension__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>