force-app/main/default/objects/Request__c/fields/Churn_Protection_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>Churn_Protection_Approval_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-775</description>
    <label>Churn Protection Approval Request</label>
    <type>Checkbox</type>
</CustomField>