force-app/main/default/objects/Request__c/fields/Churn_Protection_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Churn_Protection_Protocol__c</fullName>
    <description>MIS-7445</description>
    <formula>HYPERLINK(&quot;https://docs.google.com/presentation/d/1Bi7MZ37s0MqRjkS1Q6ci-8rMoamPY1Imyw7BXmhDeLs/edit?slide=id.g361ed0f3ca7_0_968#slide=id.g361ed0f3ca7_0_968&quot;, &quot;Churn Protection for GTM&quot;)</formula>
    <label>Churn Protection Protocol</label>
    <type>Text</type>
</CustomField>